--- a/index.html
+++ b/index.html
@@ -12,14 +12,20 @@
       <nav>
         <a href="./index.html" class="studio"><span class="web">Web</span>Studio</a>
 
-        <ul>
-          <li><a href="#" class="navigation">Studio</a></li>
-          <li><a href="#" class="navigation">Portfolio</a></li>
-          <li><a href="#" class="navigation">Contacts</a></li>
+        <ul class="list">
+          <li>
+            <a href="#" class="link"><span class="navigation">Studio</span></a>
+          </li>
+          <li>
+            <a href="#" class="link"><span class="navigation">Portfolio</span></a>
+          </li>
+          <li>
+            <a href="#" class="link"><span class="navigation">Contacts</span></a>
+          </li>
         </ul>
       </nav>
       <address>
-        <ul>
+        <ul class="list">
           <li><a href="mailto:info@devstudio.com" class="address">info@devstudio.com</a></li>
           <li><a href="tel:+110001111111" class="address">+11 (000) 111-11-11</a></li>
         </ul>
@@ -31,7 +37,7 @@
       <!-- section_1 -->
       <section class="section_one">
         <h1 class="introduction_hero">Effective Solutions for Your Business</h1>
-        <ul>
+        <ul class="list">
           <li>
             <button type="button" class="button_hero">
               <span class="button_text">Order Service</span>
@@ -42,7 +48,7 @@
       <!-- section_2 -->
       <section class="section_two">
         <h2 hidden>What we do best</h2>
-        <ul>
+        <ul class="list">
           <li>
             <h3 class="section_two_name">Strategy</h3>
             <p class="section_two_paragraph">
@@ -77,7 +83,7 @@
       <!-- section_3-->
       <section class="section_three">
         <h2 class="section_three_name">What are we doing</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/images/img_What_are_we_doing_one.jpg"
@@ -108,7 +114,7 @@
       <!-- section_4 -->
       <section class="section_four">
         <h2 class="section_four_name">Our Team</h2>
-        <ul class="team_card_list">
+        <ul class="list">
           <li class="team_card_list_item">
             <img
               src="./images/images_card_one/img_Team_card_one.jpg"
@@ -155,7 +161,7 @@
 
     <!-- footer_sectoin -->
     <footer class="footer">
-      <a href="./index.html" class="studio"><span class="web">Web</span>Studio</a>
+      <a href="./index.html" class="studio_footer"><span class="web">Web</span>Studio</a>
       <p class="footer_paragraph">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
