--- a/portfolio.html
+++ b/portfolio.html
@@ -11,97 +11,98 @@
       <nav>
         <a href="./index.html" class="studio"><span class="web">Web</span>Studio</a>
 
-        <ul>
+        <ul class="list">
           <li><a href="#" class="navigation">Studio</a></li>
           <li><a href="#" class="navigation">Portfolio</a></li>
           <li><a href="#" class="navigation">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul>
+        <ul class="list">
           <li><a href="mailto:info@devstudio.com" class="address">info@devstudio.com</a></li>
           <li><a href="tel:+110001111111" class="address">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
     <main>
-      <section>
-        <h1>Portfolio</h1>
-        <ul>
+      <!-- section -->
+      <section class="section_portfolio">
+        <h1 hidden>Portfolio</h1>
+        <ul class="list">
           <li>
-            <button type="button" class="batton_portfolio">
-              <span class="batton_text_white_portfolio">All</span>
+            <button type="button" class="btn_portfolio">
+              <span class="btn_portfolio_text">All</span>
             </button>
           </li>
           <li>
-            <button type="button" class="batton_portfolio">
-              <span class="batton_text_portfolio">Web Site</span>
+            <button type="button" class="button_portfolio">
+              <span class="button_portfolio_text">Web Site</span>
             </button>
           </li>
           <li>
-            <button type="button" class="batton_portfolio">
-              <span class="batton_text_portfolio">App</span>
+            <button type="button" class="button_portfolio">
+              <span class="button_portfolio_text">App</span>
             </button>
           </li>
           <li>
-            <button type="button" class="batton_portfolio">
-              <span class="batton_text_portfolio">Desing</span>
+            <button type="button" class="button_portfolio">
+              <span class="button_portfolio_text">Desing</span>
             </button>
           </li>
           <li>
-            <button type="button" class="batton_portfolio">
-              <span class="batton_text_portfolio">Marketing</span>
+            <button type="button" class="button_portfolio">
+              <span class="button_portfolio_text">Marketing</span>
             </button>
           </li>
         </ul>
-        <ul>
+        <ul class="list">
           <li>
             <img src="./images/images_portfolio/img_portfolio_one.jpg" alt="" width: 360px; height:
             300px;>
-            <h2>Banking App Interface Concept</h2>
-            <p>App</p>
+            <h2 class="portfolio_title">Banking App Interface Concept</h2>
+            <p class="portfolio_text">App</p>
           </li>
           <li>
             <img src="./images/images_portfolio/img_portfolio_two.jpg" alt="" width: 360px; height:
             300px;>
-            <h2>Cashless Payment</h2>
-            <p>Marketing</p>
+            <h2 class="portfolio_title">Cashless Payment</h2>
+            <p class="portfolio_text">Marketing</p>
           </li>
           <li>
             <img src="./images/images_portfolio/img_portfolio_three.jpg" alt="" width: 360px;
             height: 300px;>
-            <h2>Meditation App</h2>
-            <p>App</p>
+            <h2 class="portfolio_title">Meditation App</h2>
+            <p class="portfolio_text">App</p>
           </li>
           <li>
             <img src="./images/images_portfolio/img_portfolio_four.jpg" alt="" width: 360px; height:
             300px;>
-            <h2>Taxi Service</h2>
-            <p>Marketing</p>
+            <h2 class="portfolio_title">Taxi Service</h2>
+            <p class="portfolio_text">Marketing</p>
           </li>
           <li>
             <img src="./images/images_portfolio/img_portfolio_five.jpg" alt="" width: 360px; height:
             300px;>
-            <h2>Screen Illustrations</h2>
-            <p>Desing</p>
+            <h2 class="portfolio_title">Screen Illustrations</h2>
+            <p class="portfolio_text">Desing</p>
           </li>
           <li>
             <img src="./images/images_portfolio/img_portfolio_six.jpg" alt="" width: 360px; height:
             300px;>
-            <h2>Online Courses</h2>
-            <p>MArketing</p>
+            <h2 class="portfolio_title">Online Courses</h2>
+            <p class="portfolio_text">MArketing</p>
           </li>
           <li>
             <img src="./images/images_portfolio/img_portfolio_seven.jpg" alt="" width: 360px;
             height: 300px;>
             <h2>Instagram Stories Concept</h2>
-            <p>Desing</p>
+            <p class="portfolio_text">Desing</p>
           </li>
           <li>
             <img src="./images/images_portfolio/img_portfolio_eight.jpg" alt="" width: 360px;
             height: 300px;>
-            <h2>Organic Food</h2>
-            <p>Web Site</p>
+            <h2 class="portfolio_title">Organic Food</h2>
+            <p class="portfolio_text">Web Site</p>
           </li>
           <li>
             <img src="./images/images_portfolio/img_portfolio_nine.jpg" alt="" width: 360px; height:
@@ -114,7 +115,7 @@
     </main>
 
     <footer class="footer">
-      <a href="./index.html" class="studio"><span class="web">Web</span>Studio</a>
+      <a href="./index.html" class="studio_footer"><span class="web">Web</span>Studio</a>
       <p class="footer_text">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
