--- a/portfolio.html
+++ b/portfolio.html
@@ -12,9 +12,15 @@
         <a href="./index.html" class="studio"><span class="web">Web</span>Studio</a>
 
         <ul class="list">
-          <li><a href="#" class="navigation">Studio</a></li>
-          <li><a href="#" class="navigation">Portfolio</a></li>
-          <li><a href="#" class="navigation">Contacts</a></li>
+          <li>
+            <a href="#" class="link"><span class="navigation">Studio</span></a>
+          </li>
+          <li>
+            <a href="#" class="link"><span class="navigation">Portfolio</span></a>
+          </li>
+          <li>
+            <a href="#" class="link"><span class="navigation">Contacts</span></a>
+          </li>
         </ul>
       </nav>
       <address>
