--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="" />
   </head>
   <body>
     <!-- header_section -->
     <header class="header">
       <nav>
-        <a href="./index.html" class="studio"><span class="web">Web</span>Studio</a>
+        <a href="./index.html" class="link"
+          ><span class="web">Web</span><span class="studio">Studio</span></a
+        >
 
         <ul class="list">
           <li>
-            <a href="#" class="link"><span class="navigation">Studio</span></a>
+            <a href="./index.html" class="link"><span class="navigation">Studio</span></a>
           </li>
           <li>
             <a href="#" class="link"><span class="navigation">Portfolio</span></a>
@@ -40,7 +43,7 @@
         <ul class="list">
           <li>
             <button type="button" class="button_hero">
-              <span class="button_text">Order Service</span>
+              <span class="button_hero_text">order service</span>
             </button>
           </li>
         </ul>
