--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="preconnect" href="" />
+    <link rel="preconnect" href="https://fonts.google.com/share?selection.family=Raleway" />
+    <link rel="preconnect" href="https://fonts.google.com/share?selection.family=Roboto" />
   </head>
   <body>
     <!-- header_section -->
@@ -164,7 +165,9 @@
 
     <!-- footer_sectoin -->
     <footer class="footer">
-      <a href="./index.html" class="studio_footer"><span class="web">Web</span>Studio</a>
+      <a href="./index.html"
+        ><span class="web">Web</span><span class="studio_footer">Studio</span></a
+      >
       <p class="footer_paragraph">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
