--- a/portfolio.html
+++ b/portfolio.html
@@ -63,56 +63,92 @@
         </ul>
         <ul class="list">
           <li>
-            <img src="./images/images_portfolio/img_portfolio_one.jpg" alt="" width: 360px; height:
-            300px;>
+            <img
+              src="./images/images_portfolio/img_portfolio_one.jpg"
+              alt=""
+              width="360"
+              height="300"
+            />
             <h2 class="portfolio_title">Banking App Interface Concept</h2>
             <p class="portfolio_text">App</p>
           </li>
           <li>
-            <img src="./images/images_portfolio/img_portfolio_two.jpg" alt="" width: 360px; height:
-            300px;>
+            <img
+              src="./images/images_portfolio/img_portfolio_two.jpg"
+              alt=""
+              width="360"
+              height="300"
+            />
             <h2 class="portfolio_title">Cashless Payment</h2>
             <p class="portfolio_text">Marketing</p>
           </li>
           <li>
-            <img src="./images/images_portfolio/img_portfolio_three.jpg" alt="" width: 360px;
-            height: 300px;>
+            <img
+              src="./images/images_portfolio/img_portfolio_three.jpg"
+              alt=""
+              width="360"
+              height="300"
+            />
             <h2 class="portfolio_title">Meditation App</h2>
             <p class="portfolio_text">App</p>
           </li>
           <li>
-            <img src="./images/images_portfolio/img_portfolio_four.jpg" alt="" width: 360px; height:
-            300px;>
+            <img
+              src="./images/images_portfolio/img_portfolio_four.jpg"
+              alt=""
+              width="360"
+              height="300"
+            />
             <h2 class="portfolio_title">Taxi Service</h2>
             <p class="portfolio_text">Marketing</p>
           </li>
           <li>
-            <img src="./images/images_portfolio/img_portfolio_five.jpg" alt="" width: 360px; height:
-            300px;>
+            <img
+              src="./images/images_portfolio/img_portfolio_five.jpg"
+              alt=""
+              width="360"
+              height="300"
+            />
             <h2 class="portfolio_title">Screen Illustrations</h2>
             <p class="portfolio_text">Desing</p>
           </li>
           <li>
-            <img src="./images/images_portfolio/img_portfolio_six.jpg" alt="" width: 360px; height:
-            300px;>
+            <img
+              src="./images/images_portfolio/img_portfolio_six.jpg"
+              alt=""
+              width="360"
+              height="300"
+            />
             <h2 class="portfolio_title">Online Courses</h2>
             <p class="portfolio_text">MArketing</p>
           </li>
           <li>
-            <img src="./images/images_portfolio/img_portfolio_seven.jpg" alt="" width: 360px;
-            height: 300px;>
+            <img
+              src="./images/images_portfolio/img_portfolio_seven.jpg"
+              alt=""
+              width="360"
+              height="300"
+            />
             <h2>Instagram Stories Concept</h2>
             <p class="portfolio_text">Desing</p>
           </li>
           <li>
-            <img src="./images/images_portfolio/img_portfolio_eight.jpg" alt="" width: 360px;
-            height: 300px;>
+            <img
+              src="./images/images_portfolio/img_portfolio_eight.jpg"
+              alt=""
+              width="360"
+              height="300"
+            />
             <h2 class="portfolio_title">Organic Food</h2>
             <p class="portfolio_text">Web Site</p>
           </li>
           <li>
-            <img src="./images/images_portfolio/img_portfolio_nine.jpg" alt="" width: 360px; height:
-            300px;>
+            <img
+              src="./images/images_portfolio/img_portfolio_nine.jpg"
+              alt=""
+              width="360"
+              height="300"
+            />
             <h2 class="portfolio_title">Fresh Coffee</h2>
             <p class="portfolio_text">Web Site</p>
           </li>
