--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <ul class="list">
           <li>
-            <a href="./index.html" class="link"><span class="navigation">Studio</span></a>
+            <a href="./portfolio.html" class="link"><span class="navigation">Studio</span></a>
           </li>
           <li>
             <a href="#" class="link"><span class="navigation">Portfolio</span></a>
