--- a/portfolio.html
+++ b/portfolio.html
@@ -5,15 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.google.com/share?selection.family=Raleway" />
+    <link rel="preconnect" href="https://fonts.google.com/share?selection.family=Roboto" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="header">
       <nav>
-        <a href="./index.html" class="studio"><span class="web">Web</span>Studio</a>
-
+        <a href="./index.html" class="link"
+          ><span class="web">Web</span><span class="studio">Studio</span></a
+        >
         <ul class="list">
           <li>
-            <a href="#" class="link"><span class="navigation">Studio</span></a>
+            <a href="./index.html" class="link"><span class="navigation">Studio</span></a>
           </li>
           <li>
             <a href="#" class="link"><span class="navigation">Portfolio</span></a>
@@ -155,7 +164,7 @@
         </ul>
       </section>
     </main>
-
+    <!-- portfolio_footer -->
     <footer class="footer">
       <a href="./index.html" class="studio_footer"><span class="web">Web</span>Studio</a>
       <p class="footer_text">
