--- a/portfolio.html
+++ b/portfolio.html
@@ -70,11 +70,12 @@
             </button>
           </li>
         </ul>
+        <!-- section_img -->
         <ul class="list">
           <li>
             <img
               src="./images/images_portfolio/img_portfolio_one.jpg"
-              alt=""
+              alt="Banking App Interface Concept"
               width="360"
               height="300"
             />
@@ -84,7 +85,7 @@
           <li>
             <img
               src="./images/images_portfolio/img_portfolio_two.jpg"
-              alt=""
+              alt="Cashless Payment"
               width="360"
               height="300"
             />
@@ -94,7 +95,7 @@
           <li>
             <img
               src="./images/images_portfolio/img_portfolio_three.jpg"
-              alt=""
+              alt="Meditation App"
               width="360"
               height="300"
             />
@@ -104,7 +105,7 @@
           <li>
             <img
               src="./images/images_portfolio/img_portfolio_four.jpg"
-              alt=""
+              alt="Taxi Service"
               width="360"
               height="300"
             />
@@ -114,7 +115,7 @@
           <li>
             <img
               src="./images/images_portfolio/img_portfolio_five.jpg"
-              alt=""
+              alt="Screen Illustrations"
               width="360"
               height="300"
             />
@@ -124,7 +125,7 @@
           <li>
             <img
               src="./images/images_portfolio/img_portfolio_six.jpg"
-              alt=""
+              alt="Online Courses"
               width="360"
               height="300"
             />
@@ -134,17 +135,17 @@
           <li>
             <img
               src="./images/images_portfolio/img_portfolio_seven.jpg"
-              alt=""
+              alt="Instagram Stories Concept"
               width="360"
               height="300"
             />
-            <h2>Instagram Stories Concept</h2>
+            <h2 class="portfolio_title">Instagram Stories Concept</h2>
             <p class="portfolio_text">Desing</p>
           </li>
           <li>
             <img
               src="./images/images_portfolio/img_portfolio_eight.jpg"
-              alt=""
+              alt="Organic Food"
               width="360"
               height="300"
             />
@@ -154,7 +155,7 @@
           <li>
             <img
               src="./images/images_portfolio/img_portfolio_nine.jpg"
-              alt=""
+              alt="Fresh Coffee"
               width="360"
               height="300"
             />
@@ -166,7 +167,9 @@
     </main>
     <!-- portfolio_footer -->
     <footer class="footer">
-      <a href="./index.html" class="studio_footer"><span class="web">Web</span>Studio</a>
+      <a href="./index.html" class="studio_footer"
+        ><span class="web" class="link">Web</span><span class="studio_footer">Studio</span></a
+      >
       <p class="footer_text">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
