--- a/index.html
+++ b/index.html
@@ -171,10 +171,10 @@
 
     <!-- footer_sectoin -->
     <footer class="footer">
-      <a href="./index.html"
-        ><span class="web">Web</span><span class="studio_footer">Studio</span></a
+      <a href="./index.html" class="studio_footer"
+        ><span class="web" class="link">Web</span><span class="studio_footer">Studio</span></a
       >
-      <p class="footer_paragraph">
+      <p class="footer_text">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
       </p>
