--- a/portfolio.html
+++ b/portfolio.html
@@ -71,87 +71,98 @@
           </li>
         </ul>
         <!-- section_img -->
-
-        <img
-          src="./images/images_portfolio/img_portfolio_one.jpg"
-          alt="Banking App Interface Concept"
-          width="360"
-          height="300"
-        />
-        <h2 class="portfolio_title">Banking App Interface Concept</h2>
-        <p class="portfolio_text">App</p>
-
-        <img
-          src="./images/images_portfolio/img_portfolio_two.jpg"
-          alt="Cashless Payment"
-          width="360"
-          height="300"
-        />
-        <h2 class="portfolio_title">Cashless Payment</h2>
-        <p class="portfolio_text">Marketing</p>
-
-        <img
-          src="./images/images_portfolio/img_portfolio_three.jpg"
-          alt="Meditation App"
-          width="360"
-          height="300"
-        />
-        <h2 class="portfolio_title">Meditation App</h2>
-        <p class="portfolio_text">App</p>
-
-        <img
-          src="./images/images_portfolio/img_portfolio_four.jpg"
-          alt="Taxi Service"
-          width="360"
-          height="300"
-        />
-        <h2 class="portfolio_title">Taxi Service</h2>
-        <p class="portfolio_text">Marketing</p>
-
-        <img
-          src="./images/images_portfolio/img_portfolio_five.jpg"
-          alt="Screen Illustrations"
-          width="360"
-          height="300"
-        />
-        <h2 class="portfolio_title">Screen Illustrations</h2>
-        <p class="portfolio_text">Desing</p>
-
-        <img
-          src="./images/images_portfolio/img_portfolio_six.jpg"
-          alt="Online Courses"
-          width="360"
-          height="300"
-        />
-        <h2 class="portfolio_title">Online Courses</h2>
-        <p class="portfolio_text">MArketing</p>
-
-        <img
-          src="./images/images_portfolio/img_portfolio_seven.jpg"
-          alt="Instagram Stories Concept"
-          width="360"
-          height="300"
-        />
-        <h2 class="portfolio_title">Instagram Stories Concept</h2>
-        <p class="portfolio_text">Desing</p>
-
-        <img
-          src="./images/images_portfolio/img_portfolio_eight.jpg"
-          alt="Organic Food"
-          width="360"
-          height="300"
-        />
-        <h2 class="portfolio_title">Organic Food</h2>
-        <p class="portfolio_text">Web Site</p>
-
-        <img
-          src="./images/images_portfolio/img_portfolio_nine.jpg"
-          alt="Fresh Coffee"
-          width="360"
-          height="300"
-        />
-        <h2 class="portfolio_title">Fresh Coffee</h2>
-        <p class="portfolio_text">Web Site</p>
+        <ul class="list">
+          <li>
+            <img
+              src="./images/images_portfolio/img_portfolio_one.jpg"
+              alt="Banking App Interface Concept"
+              width="360"
+              height="300"
+            />
+            <h2 class="portfolio_title">Banking App Interface Concept</h2>
+            <p class="portfolio_text">App</p>
+          </li>
+          <li>
+            <img
+              src="./images/images_portfolio/img_portfolio_two.jpg"
+              alt="Cashless Payment"
+              width="360"
+              height="300"
+            />
+            <h2 class="portfolio_title">Cashless Payment</h2>
+            <p class="portfolio_text">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/images_portfolio/img_portfolio_three.jpg"
+              alt="Meditation App"
+              width="360"
+              height="300"
+            />
+            <h2 class="portfolio_title">Meditation App</h2>
+            <p class="portfolio_text">App</p>
+          </li>
+          <li>
+            <img
+              src="./images/images_portfolio/img_portfolio_four.jpg"
+              alt="Taxi Service"
+              width="360"
+              height="300"
+            />
+            <h2 class="portfolio_title">Taxi Service</h2>
+            <p class="portfolio_text">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/images_portfolio/img_portfolio_five.jpg"
+              alt="Screen Illustrations"
+              width="360"
+              height="300"
+            />
+            <h2 class="portfolio_title">Screen Illustrations</h2>
+            <p class="portfolio_text">Desing</p>
+          </li>
+          <li>
+            <img
+              src="./images/images_portfolio/img_portfolio_six.jpg"
+              alt="Online Courses"
+              width="360"
+              height="300"
+            />
+            <h2 class="portfolio_title">Online Courses</h2>
+            <p class="portfolio_text">MArketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/images_portfolio/img_portfolio_seven.jpg"
+              alt="Instagram Stories Concept"
+              width="360"
+              height="300"
+            />
+            <h2 class="portfolio_title">Instagram Stories Concept</h2>
+            <p class="portfolio_text">Desing</p>
+          </li>
+          <li>
+            <img
+              src="./images/images_portfolio/img_portfolio_eight.jpg"
+              alt="Organic Food"
+              width="360"
+              height="300"
+            />
+            <h2 class="portfolio_title">Organic Food</h2>
+            <p class="portfolio_text">Web Site</p>
+          </li>
+          <li>
+            <img
+              src="./images/images_portfolio/img_portfolio_nine.jpg"
+              alt="Fresh Coffee"
+              width="360"
+              height="300"
+            />
+            <h2 class="portfolio_title">Fresh Coffee</h2>
+            <p class="portfolio_text">Web Site</p>
+          </li>
+        </ul>
       </section>
     </main>
     <!-- portfolio_footer -->
