--- a/portfolio.html
+++ b/portfolio.html
@@ -17,9 +17,7 @@
   <body>
     <header class="header">
       <nav>
-        <a href="./index.html" class="link"
-          ><span class="web">Web</span><span class="studio">Studio</span></a
-        >
+        <a href="./index.html" class="logo">Web<span class="studio">Studio</span></a>
         <ul class="list">
           <li>
             <a href="./index.html" class="link"><span class="navigation">Studio</span></a>
