--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
     <!-- header_section -->
     <header class="header">
       <nav>
-        <a href="./index.html" class="link"
-          ><span class="web">Web</span><span class="studio">Studio</span></a
-        >
+        <a href="./index.html" class="logo"><span class="studio">Studio</span></a>
 
         <ul class="list">
           <li>
