--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
     <!-- header_section -->
     <header class="header">
       <nav>
-        <a href="./index.html" class="logo"><span class="studio">Studio</span></a>
+        <a href="./index.html" class="logo">Web<span class="studio">Studio</span></a>
 
         <ul class="list">
           <li>
-            <a href="#" class="link"><span class="navigation">Studio</span></a>
+            <a href="./index.html" class="link"><span class="navigation">Studio</span></a>
           </li>
           <li>
             <a href="./portfolio.html" class="link"><span class="navigation">Portfolio</span></a>
           </li>
           <li>
-            <a href="#" class="link"><span class="navigation">Contacts</span></a>
+            <a href="" class="link"><span class="navigation">Contacts</span></a>
           </li>
         </ul>
       </nav>
@@ -169,9 +169,7 @@
 
     <!-- footer_sectoin -->
     <footer class="footer">
-      <a href="./index.html" class="studio_footer"
-        ><span class="web" class="link">Web</span><span class="studio_footer">Studio</span></a
-      >
+      <a href="./index.html" class="logo">Web<span class="studio_footer">Studio</span></a>
       <p class="footer_text">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
