--- a/portfolio.html
+++ b/portfolio.html
@@ -23,10 +23,10 @@
             <a href="./index.html" class="link"><span class="navigation">Studio</span></a>
           </li>
           <li>
-            <a href="#" class="link"><span class="navigation">Portfolio</span></a>
+            <a href="./portfolio.html" class="link"><span class="navigation">Portfolio</span></a>
           </li>
           <li>
-            <a href="#" class="link"><span class="navigation">Contacts</span></a>
+            <a href="" class="link"><span class="navigation">Contacts</span></a>
           </li>
         </ul>
       </nav>
@@ -38,7 +38,7 @@
       </address>
     </header>
     <main>
-      <!-- section -->
+      <!-- section_button -->
       <section class="section_portfolio">
         <h1 hidden>Portfolio</h1>
         <ul class="list">
@@ -107,7 +107,7 @@
             >
           </li>
           <li>
-            <a href="" class
+            <a href="" class="link"
               ><img
                 src="./images/images_portfolio/img_portfolio_four.jpg"
                 alt="Taxi Service"
@@ -183,9 +183,7 @@
     </main>
     <!-- portfolio_footer -->
     <footer class="footer">
-      <a href="./index.html" class="studio_footer"
-        ><span class="web" class="link">Web</span><span class="studio_footer">Studio</span></a
-      >
+      <a href="./index.html" class="logo">Web<span class="studio_footer">Studio</span></a>
       <p class="footer_text">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
