--- a/portfolio.html
+++ b/portfolio.html
@@ -43,8 +43,8 @@
         <h1 hidden>Portfolio</h1>
         <ul class="list">
           <li>
-            <button type="button" class="btn_portfolio">
-              <span class="btn_portfolio_text">All</span>
+            <button type="button" class="button_portfolio">
+              <span class="button_portfolio_text">All</span>
             </button>
           </li>
           <li>
