--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <!-- header_section -->
     <header class="header">
-      <nav class="link">
+      <nav>
         <a href="./index.html" class="logo">Web<span class="studio">Studio</span></a>
 
         <ul class="list">
