--- a/portfolio.html
+++ b/portfolio.html
@@ -15,6 +15,7 @@
     />
   </head>
   <body>
+    <!-- header -->
     <header class="header">
       <nav>
         <a href="./index.html" class="logo">Web<span class="studio">Studio</span></a>
