--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
   <body>
     <!-- header -->
     <header class="header">
-      <nav>
+      <nav class="link">
         <a href="./index.html" class="logo">Web<span class="studio">Studio</span></a>
         <ul class="list">
           <li>
