--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h1 class="introduction_hero">Effective Solutions for Your Business</h1>
 
         <button type="button" class="section_one_button">
-          <span class="section_one_button_text">order service</span>
+          order service
         </button>
 
       </section>
